# feup-cal

./: .gitignore  LICENSE  README.md
tp1/: CMakeLists.txt
tp1/src/: change.cpp  change.h  factorial.cpp  factorial.h  partitioning.cpp  partitioning.h  sum.cpp  sum.h
tp1/test/: tests.cpp
tp2/: CMakeLists.txt  main.cpp
tp2/src/: labyrinth.cpp  labyrinth.h  sudoku.cpp  sudoku.h
tp2/test/: tests.cpp
tp3/: CMakeLists.txt  main.cpp
tp3/src/: NearestPoints.cpp  NearestPoints.h
tp3/test/: tests.cpp
tp4/: CMakeLists.txt
tp4/src/: graph.h  person.cpp  person.h
tp4/test/: tests.cpp
tp5/: CMakeLists.txt
tp5/src/: graph.h
tp5/test/: tests.cpp
tp6/: CMakeLists.txt  main.cpp
tp6/src/: animation_util.cpp  animation_util.h  string_util.cpp  string_util.h
tp7/: CMakeLists.txt
tp7/src/: graph.h
tp7/test/: tests.cpp
tp8/: CMakeLists.txt  main.cpp
tp8/src/: graph.h
tp8/test/: tests.cpp
